[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Game/Ships/playerShip1_blue.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Entities/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Game/Effects/spaceEffects_007.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/health_circle.png" type="Texture" id=4]
[ext_resource path="res://Assets/Game/Ships/playerLife1_blue.png" type="Texture" id=5]

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." groups=[
"cameras",
]]

[node name="Ship" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="BoosterRight" type="Sprite" parent="Ship"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 25.1005, 82.6998 )
texture = ExtResource( 3 )

[node name="BoosterLeft" type="Sprite" parent="Ship"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -25.0997, 82.7001 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="ShootSpawnPosition" type="Position2D" parent="."]
position = Vector2( 38, 0 )

[node name="HealthBar" type="TextureProgress" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -60.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 60, 60 )
value = 80.0
texture_progress = ExtResource( 4 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.397295, 0.794597 )
scale = Vector2( 2.9208, 3.35783 )

[node name="DirectionArrow" type="Sprite" parent="."]
visible = false
rotation = 1.5708
texture = ExtResource( 5 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
